fix of syntax in Truffle dockerfile

--- a/truffle/Dockerfile
+++ b/truffle/Dockerfile
@@ -4,7 +4,7 @@ LABEL maintainer="Sergio Campos <chech0x@gmail.com>"
 
 
 RUN apk add -u --no-cache nodejs nodejs-npm git autoconf build-base python curl openssh-client openssl openssl-dev && \
- mpn install -g npm@6 && \
+ npn install -g npm@6 && \
  npm install -g truffle && \
  npm install -g ganache-cli && \
  npm install -g zeppelin-solidity && \
