Adding support for @openzeppelin/cli (2.5.2)  and new Truffle new version

--- a/truffle/Dockerfile
+++ b/truffle/Dockerfile
@@ -1,7 +1,8 @@
 # docker build -t eth-truffle-dev:0.0.1 .
-FROM alpine:3.9.4
+FROM alpine:3.10.1
 LABEL maintainer="Sergio Campos <chech0x@gmail.com>"
 
+USER root 
 
 RUN apk update --no-cache --purge && apk upgrade --no-cache --purge && apk add -u --no-cache nodejs-current npm git autoconf python build-base curl openssh-client openssl openssl-dev && \
  npm install -g npm@latest && \
@@ -12,12 +13,18 @@ RUN apk update --no-cache --purge && apk upgrade --no-cache --purge && apk add -
  addgroup -S developer && adduser -S developer -G developer
 
  
- RUN npm install --no-optional -g truffle@latest && \
- npm install -g ganache-cli@latest && \
- npm install -g openzeppelin-solidity@latest
- 
-
 USER developer 
+
+ RUN mkdir -p ~/.npm-globa && \
+ npm config set prefix '~/.npm-global' && \
+ export PATH=~/.npm-global/bin:$PATH && \
+ npm install --no-optional -g truffle@latest && \
+ npm install -g ganache-cli@latest && \
+ npm install -g @openzeppelin/cli@2.5.2 
+ 
+    
+ENV PATH="/home/developer/.npm-global/bin:${PATH}"
+
 
 RUN mkdir -p /home/developer/workdir && \
  chown developer:developer /home/developer/workdir 
